2016-10-19 Wed  Jari Aalto  <jari.aalto@cante.net>

	* bin/perl-depends.pl (POD): Fix spelling.

2012-07-01 Sun  Jari Aalto  <jari.aalto@cante.net>

	* bin/perl-depends.pl (Help): Update POD and fix grammar. Patch
	and partial proof reading thanks to Justin B Rye <jbr@edlug.org.uk>.

2011-03-24 Thu  Jari Aalto  <jari.aalto@cante.net>

	* bin/perl-depends.pl (Main): Correct instrumented *.tmp zero file
	size. Add missing $_ arg to write content of modified file into
	(__print_depends): Make perl version to match 5.\d\d, not 5.10.
	Return 0 if instrumented file only uses standard Perl modules,
	return 1 otherwise. Display header "PERL MODULE DPENDENCY LIST"
	only if there are modules to loop.
	(Help::EXIT STATUS): Document status codes 0 and 1.

2010-06-22  Jari Aalto  <jari.aalto@cante.net>

	* bin/perl-depends.pl (HELP): Delete duplicate EXAMPLES section.
	(AVAILABILITY): leave only URL.

2010-05-27 Thu  Jari Aalto  <jari.aalto@cante.net>

	* bin/perl-depends.pl (Help): Correct load of Pod::Man.

	* Makefile: bin/perl-depends.1: Delete. Generated from *.pl.
	(doc/conversion/index.html): Delete. Unused rule.
	(XARGS, PERL, docdir, manpage): New variables,
	(clean): Use find(1).
	(distclean): Remove generated directories.
	(docdir): New rule.
	(man, html, txt): Rewrite rule.

	* doc/: remove directory tree. Generated by Makefile.

2010-05-01 Sat  Jari Aalto  <jari.aalto@cante.net>

	* bin/perl-depends.pl (HandleCommandLineArgs): Remove
	"require_order" from Getopt::Long::config().

2010-04-15 Thu  Jari Aalto  <jari.aalto@cante.net>

	* bin/perl-depends.pl (Help): rewrite eval Pod::Man call.
	(HandleCommandLineArgs): Correct many of the Perl::Critic remarks.

2010-03-24 Wed  Jari Aalto  <jari.aalto@cante.net>

	* README (README): Add Copyright and License.

	* bin/perl-depends.pl: (POD::DESCRIPTION): Fix typos.
	(POD::OPTIONS): Remove --help-exclude. There is no such option.
	(POD::SEE ALSO): Remove cloc(1), add cpan(1).
